# rdp2web

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  input.rs  lib.rs  main.rs  rdp.rs  web.rs
static/: index.html
tests/: local_env.rs
