[package]
name = "rdp2web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
dotenvy = "0.15"
futures-util = "0.3"
ironrdp = { version = "0.16", features = ["connector", "graphics", "session"] }
ironrdp-blocking = "0.9"
ironrdp-core = "0.2"
ironrdp-displaycontrol = "0.7.0"
ironrdp-dvc = "0.7.0"
ironrdp-egfx = "0.2.0"
ironrdp-graphics = "0.8"
ironrdp-pdu = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sspi = { version = "0.21", features = ["network_client"] }
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-cert = "0.2"
rustls-pemfile = "2.2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serial_test = "3.2"
tower = { version = "0.5", features = ["util"] }

[patch.crates-io]
ironrdp-connector = { path = "vendor/ironrdp-connector" }
ironrdp-egfx = { path = "vendor/ironrdp-egfx" }
